<resources>
    <string name="app_name">Keyple Demo - Validation</string>

    <string name="action_settings">Settings</string>

    <string name="card_reading_title">Card reading</string>
    <string name="no_tickets_title">No valid title</string>
    <string name="valid_title">Validation</string>
    <string name="error_title">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="version">version %s</string>

    <string name="quit">Quitter</string>
    <string name="reader_plugin">Reader plugin : %s</string>
    <string name="sam_plugin">Sam plugin : %s</string>
    <string name="present_card">Please present your contactless support for validation</string>
    <string name="no_trips_left">No trips left</string>
    <string name="expired_title">Expired title</string>
    <string name="no_valid_title_detected">No valid title detected</string>
    <string name="no_tickets_small_desc">Please reload your support.</string>
    <string name="valid_main_desc">Validation completed!</string>
    <string name="valid_location_time">%s\n%s</string>
    <string name="valid_trips_left_zero">You have no trip left</string>
    <string name="valid_trips_left_single">You have 1 trip left</string>
    <string name="valid_trips_left_multiple">You have %d trips left.</string>
    <string name="valid_season_ticket">You have a season pass valid until %s.</string>
    <string name="valid_last_desc">Have a nice trip!</string>
    <string name="error_main_desc">An error occurred.</string>
    <string name="error_small_desc">Please try again.</string>

    <!-- Settings screen -->
    <string name="battery_mode">Battery powered mode</string>
    <string name="location_label">Set location</string>
    <string name="location_hint">E.g. Paris, Venise</string>
    <string name="validation_period_label">Validation period (in min)</string>
    <string name="validation_period_hint">E.g. 10</string>
    <string name="time_label">Set time and date</string>
    <string name="start_label">Start</string>
    <string name="msg_location_empty">Please fill in location</string>

    <!-- Device selector screen -->
    <string name="device_title">What type of terminal is it?</string>
    <string name="device_bluebird">BLUEBIRD</string>
    <string name="device_coppernic">COPPERNIC</string>
    <string name="device_famoco">FAMOCO</string>
    <string name="device_flowbird">FLOWBIRD</string>

    <!-- Home screen -->
    <string name="home_description">Open source API for Smart Ticketing</string>
    <string name="start_validation_label">Start validation</string>
    <string name="calypso">Calypso Networks Association</string>

    <!-- Error screen -->
    <string name="card_invalid_title">Card not valid</string>
    <string name="card_invalid_aid">Selection error : AID not found.</string>
    <string name="card_invalid_default">Invalid card</string>
    <string name="card_invalid_main_desc">Invalid on this network</string>
    <string name="card_invalid_structure">Selection error : Unknown structure.</string>
    <string name="card_invalid_small_desc">This is a \"%s\" card.</string>

    <!--    Dialog-->
    <string name="permission_denied_message">You must accept the requested permissions to continue. Please relaunch the app.</string>
</resources>
