<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_img_bg_valideur"
    tools:context="org.calypsonet.keyple.demo.validation.ui.activities.SettingsActivity">

    <include layout="@layout/logo_toolbar" android:id="@+id/appBarLayout"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <CheckBox
        android:id="@+id/batteryPoweredBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        app:layout_constraintEnd_toStartOf="@+id/batteryPoweredText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/locationView"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:buttonTint="@color/white"
        />

    <TextView
        android:id="@+id/batteryPoweredText"
        android:text="@string/battery_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mediumRegularWhite"
        android:layout_marginStart="@dimen/settings_box_text_start_margin"
        app:layout_constraintStart_toEndOf="@id/batteryPoweredBox"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <LinearLayout
        android:id="@+id/locationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        android:layout_marginEnd="@dimen/settings_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@+id/timeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batteryPoweredBox"
        android:orientation="vertical">

        <TextView
            android:id="@+id/locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            style="@style/mediumBoldWhite"
            android:layout_marginBottom="@dimen/settings_edit_margin_bottom" />

        <Spinner
            android:id="@+id/spinnerLocationList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>


    <Button
        android:id="@+id/timeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        android:layout_marginStart="@dimen/settings_horizontal_padding"
        android:layout_marginEnd="@dimen/settings_horizontal_padding"
        style="@style/whiteBtnText"
        android:background="@drawable/btn_blue"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationView" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        style="@style/bigBoldWhite"
        android:layout_marginBottom="@dimen/settings_edit_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/startBtn"
        android:layout_width="@dimen/settings_start_ic_size"
        android:layout_height="@dimen/settings_start_ic_size"
        android:src="@drawable/ic_start_white"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/eclipseLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startLabel"
        android:contentDescription="@string/start_label" />

    <ImageView
        android:id="@+id/eclipseLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_calypso"
        android:scaleType="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/calypso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/home_element_margin" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:gravity="center"
        android:layout_margin="5dp"
        style="@style/mediumRegularBlack"
        android:textSize="@dimen/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>